<resources>
	<string name="app_name">academy_weather</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="search_for_current_weather">Search for current weather</string>
	<string name="wind_direction">Wind direction</string>
	<string name="humidity">Humidity</string>
	<string name="wind">Wind speed</string>
	<string name="pressure">Pressure</string>
	<string name="visibility">Visibility</string>
	<string name="uv">UV</string>
</resources>